--- a/Ecommerce.html
+++ b/Ecommerce.html
@@ -5,10 +5,10 @@
         <juego de caracteres meta  =" UTF-8 " > <!--Se introduce al codigo un conjunto de caracteres para que puedan ser usados-->
         <meta  http-equiv =" X-UA-Compatible " content =" IE=edge " > <!--Se configura la vista de compatibilidad-->
         <meta  name =" viewport " content =" ancho=ancho-del-dispositivo, escala-inicial=1.0 " > <!--Se inicializa el viewport, para acomodar la visualizacion estructural-->
-        <enlace  rel =" icono de acceso directo " href =" ./images/logo.png " type =" imagen/svg+xml " > <!--Se inserta el acceso directo y se referencia el enlace-->
+        <enlace  rel =" icono de acceso directo " href =" ./images/logo.jpg " type =" imagen/svg+xml " > <!--Se inserta el acceso directo y se referencia el enlace-->
         
         <!-- importa el archivo CSS en HTML -->
-        <enlace  rel =" hoja de estilo " href =" estilo.css " >
+        <enlace  rel =" hoja de estilo " href ="Ecommerce.css" >
         
         <!--Enlace de fuente de icono-->
         <enlace  rel =" hoja de estilo " href =" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css " >
@@ -420,6 +420,6 @@
     <div class="credit">Diseñado por <span>JuanSepúleda</span>|| all rights reserved.</div>
 </section>
 <!--Link del codigo de javascript-->
-<script src="app.js"></script>
+<script src="Ecommerce.js"></script>
 </body>
 </html>
